Tue Jul 03 03:33:13 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.h, config/gdm.conf.in: Made HonorIndirect default
	  to true now

Tue Jul 03 02:18:08 2001  George Lebl <jirka@5z.com>

	* Release 2.2.3

Tue Jul 03 02:14:41 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.h: Hosts,Broadcast were in the wrong section

	* daemon/xdmcp.c: check for current displays BEFORE we check the
	  number of pending and allocate a new display, this way we'll remove
	  it if it itself has been pending, also don't just dispose, the
	  display may be already managed, in which case we want to unmanage
	  it to avoid a process leak.

	* gdm.spec.in: fix pam prefix stuff and file listing

	* config/Makefile.am: fix pam installation stuff

Mon Jul 02 14:36:57 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: In remote (xdmcp) mode, allow killing of the
	  login window by a "Quit" on the menubar.  I will make this
	  string better when I'm not in string freeze mode again.  It needs
	  to be made better on the chooser as well.

Mon Jul 02 14:11:38 2001  George Lebl <jirka@5z.com>

	* daemon/choose.c, daemon/gdm.c: do not count chooser as pending
	  indirect displays, they are not.  Only count them when the host has
	  been chosen, so this allows as many choosers as login screens.
	  When a new host is chosen and the limit has been reached, whack the
	  oldest pending indirect display.  Makes choosers much easier to
	  manage and use, and makes more sense.

	* gui/gdmchooser.c: set the background color if any background is set

Mon Jul 02 12:42:58 2001  George Lebl <jirka@5z.com>

	* daemon/xdmcp.c: remove sources for the watches during xdmcp close

	* configure.in: raise version to 2.2.3

Sun Jul 01 21:48:30 2001  George Lebl <jirka@5z.com>

	* configure.in: add ja.po and zh_TW.Big5 as those work again
	  apparently

Sun Jul 01 15:08:51 2001  George Lebl <jirka@5z.com>

	* daemon/xdmcp.c, daemon/choose.[ch]: use correct prototypes and stop
	  casting watch functions
