@@ -1,3 +1,7 @@
+Tue Jul 03 13:18:18 2001  George Lebl <jirka@5z.com>
+
+	* Makefile.am, config/Makefile.am: prepend $DESTDIR to $PAM_PREFIX
+
 Tue Jul 03 03:33:13 2001  George Lebl <jirka@5z.com>
 
 	* daemon/gdm.h, config/gdm.conf.in: Made HonorIndirect default
